unpackaged/main/default/objects/Referral_Record__c/Referral_Record__c.object-meta.xml
<CustomObject>
    <label>Referral Record</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Referral Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>