unpackaged/main/default/objects/Referral_Record__c/fields/Favourite__c.field-meta.xml
<CustomField>
    <fullName>Favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite</label>
    <type>Checkbox</type>
</CustomField>