unpackaged/main/default/objects/Referral_Record__c/fields/Knowledge_Article_Referred__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Referred__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Article Referred</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Referral Records</relationshipLabel>
    <relationshipName>Referral_Records</relationshipName>
    <type>Lookup</type>
</CustomField>