unpackaged/main/default/objects/Referral_Record__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Records</relationshipLabel>
    <relationshipName>Referral_Records</relationshipName>
    <type>Lookup</type>
</CustomField>