unpackaged/main/default/objects/Referral_Record__c/fields/Referral_Key__c.field-meta.xml
<CustomField>
    <fullName>Referral_Key__c</fullName>
    <formula>Knowledge_Article_Referred__c +  Patient__c</formula>
    <label>Referral Key</label>
    <type>Text</type>
</CustomField>