unpackaged/main/default/objects/Referral_Record__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Records</relationshipName>
    <type>Lookup</type>
</CustomField>