unpackaged/main/default/objects/Referral_Record__c/fields/When_it_was_referred__c.field-meta.xml
<CustomField>
    <fullName>When_it_was_referred__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>When it was referred?</label>
    <type>DateTime</type>
</CustomField>